Image component edits

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -184,7 +184,7 @@ Enabling asset support allows you to access the `astro:assets` module. This modu
 
 ### `<Image />`
 
-The `<Image />` component generates an `<img>` tag with all the necessary attributes needed to display the image while avoiding Content Layout Shift **(CLS)**.
+The `<Image />` component generates an `<img>` tag. This component can transform an image's dimensions, file type and quality to produce an optimized image that avoids Content Layout Shift **(CLS)**.
 
 :::tip[What is Content Layout Shift?]
 CLS is a score that reflects how much content shifted on your page during loading. The ideal number for CLS is as close to zero as possible, which the `Image` component enforces by automatically selecting the correct `width` and `height` for local images.
@@ -217,19 +217,21 @@ import myImage from "../assets/my_image.png"; // Image is 1600x900
 
 ##### width and height
 
-These properties are used to size the image while ensuring there will be no CLS. These properties are required for remote images. When using local images, the `width` and `height` can be automatically inferred from the source file.
+These properties define the dimensions to use for the image.
+
+When using local images in their original aspect ratio, the `width` and `height` can be automatically inferred from the source file and are optional. However, both of these properties are required for remote images. 
 
 ##### format
 
-`format` is used to set the [image file type](https://developer.mozilla.org/en-US/docs/Web/Media/Formats/Image_types#common_image_file_types). This property is optional, but the default is `webp`.
+You can optionally state the [image file type](https://developer.mozilla.org/en-US/docs/Web/Media/Formats/Image_types#common_image_file_types) to be used. The default file format used is `webp`.
 
 ##### quality
 
-`quality` affects the image transformation quality. It can either be a preset from `low`, `medium`, `high`, `max` (automatically normalized between formats) or a number from `0` to `100` (interpreted differently between formats.) This property is optional.
+`quality` is an optional prperty that can either be a preset (`low`, `medium`, `high`, `max`) that is automatically normalized between formats or a number from `0` to `100` (interpreted differently between formats).
 
-##### alt
+##### alt (required)
 
-Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images.
+Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images.
 
 This attribute is required for the `<Image />` component. This component will throw an error if no alt text is provided.
 
@@ -237,7 +239,7 @@ If the image is merely decorative (i.e. doesn't contribute to the understanding 
 
 ##### Additional properties
 
-In addition to the properties listed previously, the Image component accepts all the properties accepted by the HTML `img` tag. You can use this, for example, to provide a `class` to the final `img` element.
+In addition to the properties above, the `<Image />` component accepts all properties accepted by the HTML `<img>` tag. For example, you can provide a `class` to the final `img` element.
 
 ```astro
 ---
@@ -263,9 +265,9 @@ import myImage from "../assets/my_image.png";
 
 ### `getImage()`
 
-In addition to the component, a `getImage()` function is provided. This function is intended for generating images destined to be used somewhere else than directly in HTML, such as for usage in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
+This function is intended for generating images destined to be used somewhere else than directly in HTML, for example in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
 
-This function takes the same parameters as the Image component, apart from `alt`.
+`getImage()` takes all the same parameters as the Image component (except `alt`).
 
 ```astro
 ---
@@ -278,7 +280,7 @@ const optimizedBackground = await getImage({src: myBackground, format: 'avif'})
 <div style={`background-image: url(${optimizedBackground.src});`}></div>
 ```
 
-It returns an objet with the following properties:
+It returns an object with the following properties:
 
 ```js
 {
