Clarify how to run client-side code in framework components

--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -31,9 +31,18 @@ Framework components run on the server by default, so this error can occur when 
 
 **Solution**: Determine the code that calls `document` or `window`. If you aren't using `document` or `window` directly and still getting this error, check to see if any packages you're importing are meant to run on the client. 
 
-- If the code is in an Astro component, move it to a `<script>` tag outside of the frontmatter. This tells Astro to run this code on the client, where `document` and `window` are available.
+If the code is in an Astro component
 
-- If the code is in a framework component, try to access these objects after rendering using lifecycle methods (e.g. [`useEffect()`](https://reactjs.org/docs/hooks-reference.html#useeffect) in React, [`onMounted()`](https://vuejs.org/api/composition-api-lifecycle.html#onmounted) in Vue, and [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount) in Svelte). You can also prevent the component from rendering on the server at all by adding the [`client:only`](/en/reference/directives-reference/#clientonly) directive.
+- move it to a `<script>` tag outside of the frontmatter.
+  - This tells Astro to run this code on the client, where `document` and `window` are available.
+
+If the code is in a framework component, there are two ways:
+
+- Entirly client-side rendered
+  - You can prevent the component from rendering on the server at all by adding the [`client:only`](/en/reference/directives-reference/#clientonly) directive.
+- Partially client-side rendered, which requires two steps:
+  - Tell the framework component to hydrate client-side by using a [`client:`](/en/reference/directives-reference/) directive.
+  - Within the framework component, use a lifecycle method to specify which parts should be client-side only. e.g. [`useEffect()`](https://reactjs.org/docs/hooks-reference.html#useeffect) in React, [`onMounted()`](https://vuejs.org/api/composition-api-lifecycle.html#onmounted) in Vue, and [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount) in Svelte.
 
 **Status**: Expected Astro behavior, as intended.
 
