fix(images): Update with feedback

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -4,7 +4,7 @@ description: Learn how to enable experimental asset support in Astro.
 i18nReady: false
 ---
 
-**Built-in Asset Support** is enabled in Astro behind an experimental flag. This built-in feature will eventually replace the optional `@astrojs/image` integration. 
+**Built-in Asset Support** is enabled in Astro behind an experimental flag. This built-in feature will eventually replace the optional `@astrojs/image` integration.
 
 The new assets experience currently features:
 
@@ -27,7 +27,7 @@ Please check every section below to avoid errors and to get the most out of usin
 
 To enable built-in asset support, add the following lines to your `astro.config.mjs` configuration file.
 
-```js title="astro.config.mjs" ins={4-6} 
+```js title="astro.config.mjs" ins={4-6}
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
@@ -130,19 +130,19 @@ To avoid errors in your project, complete the following steps:
       const localAlt = "The Astro Logo";
       ---
 
-      <Image 
+      <Image
         src={localImage}
         width={300}
         aspectRatio="16:9"
-        alt={localAlt} 
+        alt={localAlt}
       />
       ```
 
 
 3. Remove any existing `<Picture />` components
 
-    Currently, the built-in assets feature does not include a `<Picture />` component. 
-    
+    Currently, the built-in assets feature does not include a `<Picture />` component.
+
     Instead, use the new `<Image />` component or the HTML `<picture>` tag.
 
     ```astro del={2,8} ins={3,9}
@@ -159,15 +159,15 @@ To avoid errors in your project, complete the following steps:
 
 ### Update content collections schemas
 
-A new `asset` helper for content collections can validate the metadata of images located in the `src/assets/` folder, such as author photos or blog cover images.
+A new `image` helper for content collections can validate the metadata of images located in the `src/assets/` folder, such as author photos or blog cover images.
 
 ```ts
-import { asset, defineCollection, z } from "astro:content";
+import { image, defineCollection, z } from "astro:content";
 
 const blogCollection = defineCollection({
   schema: z.object({
     title: z.string(),
-    image: asset({ width: 1120, height: 1120 }),
+    cover: image().refine((img) => img.width >= 1080, {message: 'Cover image must be at least 1080 pixels wide!'}),
   }),
 });
 ```
@@ -219,7 +219,7 @@ import myImage from "../assets/my_image.png"; // Image is 1600x900
 
 These properties define the dimensions to use for the image.
 
-When using local images in their original aspect ratio, the `width` and `height` can be automatically inferred from the source file and are optional. However, both of these properties are required for remote images. 
+When using local images in their original aspect ratio, the `width` and `height` can be automatically inferred from the source file and are optional. However, both of these properties are required for remote images.
 
 ##### format
 
