--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -285,7 +285,7 @@ It returns an object with the following properties:
 ```js
 {
   options: {...} // Original parameters passed,
-  src: "https//..." // Path to the generate image,
+  src: "https//..." // Path to the generated image,
   attributes: {...} // Additional HTML attributes needed to render the image (width, height, style, etc..)
 }
 ```
