update relative images statement

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -84,7 +84,7 @@ import rocket from '../assets/images/rocket.svg'
 
 ### Update your Markdown files
 
-Relative images located in `src/assets` can now be referenced in Markdown and MDX files. These will automatically be optimized and hashed by Astro's build process.
+Relative images can now be referenced in Markdown and MDX files. These will automatically be optimized and hashed by Astro's build process.
 
 This allows you to move your images from the `public/` directory to the new, reserved `src/assets/` directory. (See the URL path of these built images in the example below.)
 
