--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -120,7 +120,7 @@ To avoid errors in your project, complete the following steps:
 
     Change all `import` statements from `@astrojs/image/components` to `astro:assets` to use the new built-in `<Image />` component.
 
-    The supported props are identical with the exception of `aspectRatio`, which is now automatically inferred from the `width` and `height` attributes.
+    Remove any component attributes from your `<Image /> components that are not [currently supported image asset properties](#properties). For example `aspectRatio` is no longer supported, as it is now automatically inferred from the `width` and `height` attributes.
 
       ```astro title="src/components/MyComponent.astro" del= {2,11} ins={3}
       ---
