better caution message

--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -6,7 +6,7 @@ i18nReady: false
 Astro [assets](/en/guides/assets/) were designed to make it easy for any image optimization service to build a service on top of Astro.
 
 :::caution
-The Image Services API is an _experimental_ Astro feature introduced in v2.1. Be mindful that the API is subject to change before it is marked as stable.
+The Image Services API is an _experimental_ Astro feature introduced in v2.1. This API is subject to change before it is marked as stable.
 :::
 
 ## What is an Image Service?
