--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -13,7 +13,7 @@ The Image Services API is an _experimental_ Astro feature introduced in v2.1. Th
 
 Astro provides two types of image services: Local and External.
 
-- **Local services** handle image transformations directly at build for static sites, or at runtime in dev / SSR. These are wrappers around libraries like Sharp, ImageMagick or Squoosh.
+- **Local services** handle image transformations directly at build for static sites, or at runtime in dev / SSR. These are often wrappers around libraries like Sharp, ImageMagick or Squoosh.
 - **External services** point to URLs and can add support for services such as Cloudinary, Vercel or any RIAPI-compliant server.
 
 ## Building using the Image Services API
