remove first layer of bullets in hooks

--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -70,7 +70,7 @@ export default service;
 
 **Required for local and external services**
 
-- `getURL(options: ImageTransform): string`
+`getURL(options: ImageTransform): string`
   - For local services, return the URL of the endpoint managing your transformation (in SSR and dev).
   - For external services, return the final URL of the image.
   - `options` contain the parameters passed by the user
@@ -79,14 +79,14 @@ export default service;
 
 **Required for Local services; unavailable for external services**
 
-- `parseURL(url: URL): ImageTransform`
+`parseURL(url: URL): ImageTransform`
   - For SSR and dev, parses the generated URLs by `getURL` back into an ImageTransform to be used by `transform`.
 
 ### `transform()`
 
 **Required for Local services only; unavailable for external services**
 
-- `transform(buffer: Buffer, options: ImageTransform): { data: Buffer, format: OutputFormat }`
+`transform(buffer: Buffer, options: ImageTransform): { data: Buffer, format: OutputFormat }`
   - Transform and return the image. It is necessary to return a `format` to ensure that the proper MIME type is served to users in development and SSR.
 
 Ultimately, in development and SSR, it is up to the local endpoint (that `getURL` points to) to call both `parseURL` and `transform` if wanted. `transform` however, is called during the build to create the final assets files.
@@ -95,7 +95,7 @@ Ultimately, in development and SSR, it is up to the local endpoint (that `getURL
 
 **Optional for both local and external services**
 
-- `getHTMLAttributes(options: ImageTransform): Record<string, any>`
+`getHTMLAttributes(options: ImageTransform): Record<string, any>`
   - Return all additional attributes needed to render the image in HTML. For instance, you might want to return a specific `class` or `style`, or `width` and `height`.
 
 ## User configuration
