--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -79,8 +79,8 @@ export default service;
 
 **Required for Local services; unavailable for external services**
 
-`parseURL(url: URL): ImageTransform`
-  - For SSR and dev, parses the generated URLs by `getURL` back into an ImageTransform to be used by `transform`.
+`parseURL(url: URL): { src: string, [key: string]: any}`
+  - For SSR and dev, parses the generated URLs by `getURL` back into an object with the different properties to be used by `transform`.
 
 ### `transform()`
 
