images can go near markdown files!
Co-authored-by: Erika <3019731+Princesseuh@users.noreply.github.com>

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -86,7 +86,7 @@ import rocket from '../assets/images/rocket.svg'
 
 Relative images can now be referenced in Markdown and MDX files. These will automatically be optimized and hashed by Astro's build process.
 
-This allows you to move your images from the `public/` directory to the new, reserved `src/assets/` directory. (See the URL path of these built images in the example below.)
+This allows you to move your images from the `public/` directory to the new, reserved `src/assets/` directory (See the URL path of these built images in the example below.) or anywhere near your Markdown files.
 
 Your existing images in `public/` and remote images are still valid, but are not automatically optimized by Astro's build process.
 
