--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -97,6 +97,7 @@ Ultimately, in development and SSR, it is up to the local endpoint (that `getURL
 
 `getHTMLAttributes(options: ImageTransform): Record<string, any>`
   - Return all additional attributes needed to render the image in HTML. For instance, you might want to return a specific `class` or `style`, or `width` and `height`.
+  - `options` contain the parameters passed by the user
 
 ## User configuration
 
