--- a/src/content/docs/en/guides/images.mdx
+++ b/src/content/docs/en/guides/images.mdx
@@ -8,15 +8,17 @@ import Since from '~/components/Since.astro';
 
 Astro provides several ways for you to use images on your site, whether they are stored locally inside your project, linked to remotely, or stored in a CMS or CDN!
 
-:::caution[Consider trying Assets (Experimental)]
-_Experimental_ asset support was added in `astro@2.1.0`. Consider following the [Assets (Experimental)](/en/guides/assets/) guide for a smoother experience with Image assets.
+:::note[using Assets (Experimental)]
+Experimental asset support was added in `astro@2.1.0`. If you have enabled assets support, see the [Assets (Experimental) Guide](/en/guides/assets/) for extra information. 
+
+**Some of the advice below is incompatible with the experimental flag.**
 :::
 
 ### In `.astro` files
 
 Astro uses HTML `<img>` elements to display images, and all HTML image attributes are supported. 
 
-The `src` attribute is required, and its format will depend on where your images are stored:
+The `src` attribute is required, and its format will depend on where your images are stored, and whether you have enabled experimental support for assets:
 
 ```astro title="src/pages/index.astro"
 ---
@@ -36,7 +38,7 @@ import rocket from '../images/rocket.svg';
 
 You can use standard Markdown `![]()` syntax or standard HTML `<img>` tags in your `.md` files for images located in your `public/` folder, or remote images on another server.
 
-If you cannot keep your images in `public/`, we recommend using the `.mdx` file format, which allows you to combine imported components with Markdown-like syntax. Use the [MDX integration](/en/guides/integrations-guide/mdx/) to add support for MDX to Astro.
+If you cannot keep your images in `public/`, we recommend enabling [experimental support for assets](/en/guides/assets/), or using the `.mdx` file format, which allows you to combine imported components with Markdown-like syntax. Use the [MDX integration](/en/guides/integrations-guide/mdx/) to add support for MDX to Astro.
 
 ```md
 // src/pages/post-1.md
@@ -117,11 +119,21 @@ The `src` attribute is **relative to the public folder**. In Markdown, you can a
 <img src="/images/logo.png" />
 ```
 
+### `src/assets/` (experimental)
+
+See the [Assets (Experimental)](/en/guides/assets/) guide for enabling experimental use of the `/assets/` folder. 
+
+This will require you to update your existing images, remove the current Astro image integration, and will also require additional manual changes to take advantage of some of its new features.
+
 ## Astro's Image Integration
 
 Astro's official image integration provides two different Astro components for rendering optimized images, `<Image />` and `<Picture />`. It is supported for all static sites and for [some server-side rendering deploy hosts](/en/guides/integrations-guide/image/#installation).
 
 After [installing `@astrojs/image`](/en/guides/integrations-guide/image/#installation), you can use these two components wherever you can use Astro components: in `.astro` and `.mdx` files.
+
+:::note[incompatible with assets]
+If you have enabled experimental asset support, then you must uninstall the official integration. See the [Assets (Experimental) Guide](/en/guides/assets/) for more information.
+:::
 
 ### `<Image />`
 
