bye bye, "sits the template"

--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -59,7 +59,7 @@ You can even write TypeScript in your component script!
 
 ### The Component Template
 
-Below the component script, sits the component template. The component template decides the HTML output of your component.
+The component template is below the code fence and determines the HTML output of your component.
 
 If you write plain HTML here, your component will render that HTML in any Astro page it is imported and used.
 
