Update PT-BR `rss.mdx` description

--- a/src/content/docs/pt-br/guides/rss.mdx
+++ b/src/content/docs/pt-br/guides/rss.mdx
@@ -1,6 +1,6 @@
 ---
 title: RSS
-description: Uma introdução a RSS em Astro
+description: Permita usuários se inscreverem ao seu conteúdo adicionando um feed RSS no seu site Astro.
 i18nReady: true
 type: recipe
 ---
