Also update the PT-BR `title` prop!

--- a/src/content/docs/pt-br/core-concepts/sharing-state.mdx
+++ b/src/content/docs/pt-br/core-concepts/sharing-state.mdx
@@ -1,5 +1,5 @@
 ---
-title: Compartilhamento de Estado
+title: Compartilhe Estado Entre Ilhas
 description: Aprenda como compartilhar estado entre componentes — e frameworks! — com Nano Stores.
 i18nReady: true
 type: recipe
