--- a/src/content/docs/pt-br/guides/rss.mdx
+++ b/src/content/docs/pt-br/guides/rss.mdx
@@ -1,5 +1,5 @@
 ---
-title: RSS
+title: Adicione um feed RSS
 description: Permita usuários se inscreverem ao seu conteúdo adicionando um feed RSS no seu site Astro.
 i18nReady: true
 type: recipe
