[reorg] new Recipes section; Basics streamlined (#2550)
* initial sidebar reorg

* tutorials key

* new (hidden) recipes page

* move ui frameworks back to guides

* add astro syntax hidden page

* update recipes page

* create initial nanostores recipe page from sharing state

* Update pages for content collections

* falso -> false

* new captcha recipe pulled from endpoints

* add yaml support recipe

* move some component content out

* slimmed down components page

* some simplifying/editing edits to routing

* update links to astro-syntax

* attempt CI fail fixes

* nav.ts indentation?

* update CLI page and put in Learn menu

* more edits to CLI page intro for friendliness

* update i18n nav.ts for sidebar updates

* final nav.ts cleanup

* more user-friendly CLI intro

* even friendlier CLI!

* hack so CLI is in Learn category for sidebar highlighting

* some Components page tidying - slots!

* minor tidying of Astro syntax as a standalone page

* Highlight recipes when on a page in recipes folder

* Recipe components

* i18n(ja): Update nav.ts (#2693)

* move Routing and MD/MDX pages into guides

* rename new page Astro Template Syntax

* recipes folder

* Move fonts back to guides

* all recipes -> more recipes

* remove back button on recipe index

* Fix nav key type issue

* Move main recipes file to avoid `index.mdx`

* i18n(zh-cn): Update nav.ts based on reorg-incl-recipes (#2687)

* i18n(zh-cn): Update nav.ts

* i18n(zh-cn): Update nav.ts

* Update nav.ts

---------

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

* update of nav (#2725)

* kill nanostores, replace with orig sharing state

* add commented out original content back in to CLI

* Make logos optional in `<CardsNav>`

* Add optional `description` support to `<CardsNav>`

* Configure content collection schema for recipes (no tags yet)

* Add `type: recipe` to recipes & write missing descriptions

* Very basic `<RecipesNav>` — needs tag, i18n support & styling

* Replace `<

--- a/src/content/docs/pt-br/guides/rss.mdx
+++ b/src/content/docs/pt-br/guides/rss.mdx
@@ -1,7 +1,8 @@
 ---
-title: RSS
-description: Uma introdução a RSS em Astro
+title: Adicione um feed RSS
+description: Permita usuários se inscreverem ao seu conteúdo adicionando um feed RSS no seu site Astro.
 i18nReady: true
+type: recipe
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 import Since from '~/components/Since.astro';
