Feat: update for the #2744

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -279,7 +279,7 @@ Quand vous importez des fichiers Markdown et MDX dans un composant Astro, vous o
 
 ```md title="/src/pages/posts/great-post.md"
 ---
-title: 'Le meilleur billet que je n\'ai jamais écrit'
+title: 'Le meilleur billet de tous les temps'
 author: 'Ben'
 ---
 
@@ -306,7 +306,7 @@ Dans les fichiers MDX, vous pouvez accéder aux propriétés depuis le frontmatt
 
 ```mdx title="/src/pages/posts/mdx-post.mdx"
 ---
-title: 'Le meilleur billet que je n\'ai jamais écrit'
+title: 'Le meilleur billet de tous les temps'
 author: 'Ben'
 ---
 export const description = 'Mettez-vous à l'aise ! Cela va être une superbe lecture.'
